--- a/src/scss/_wheel.scss
+++ b/src/scss/_wheel.scss
@@ -8,6 +8,18 @@
   overflow: hidden;
 }
 
+.initial-spin {
+  animation-name: anim-slow-spin;
+  animation-duration: 30s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+
+  &.stop {
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+  }
+}
+
 .spin,
 .selection {
   transition: all 5s ease-in-out;
@@ -26,14 +38,29 @@
   font-size: 4rem;
   color: lightblue;
   text-shadow: 0px 0px 5px lightblue;
+
+  &.is-spinning {
+    animation-name: anim-arrow-tick;
+    animation-duration: 100ms;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+  }
 }
 
-// .shake {
-//   animation-duration: 2s;
-// }
+@keyframes anim-slow-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 
-// .confetti-container {
-//   display: none;
-//   opacity: 0;
-//   transition: opacity 1000ms ease-in-out;
-// }
+@keyframes anim-arrow-tick {
+  from {
+    transform: translateX(-50%) rotate(-10deg);
+  }
+  to {
+    transform: translateX(-50%) rotate(0deg);
+  }
+}
